--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,17 @@
 {
-    "name": "streams/select-field-type",
-    "description": "Country field type for Streams Platform",
-    "type": "streams-field-type",
-    "version" : "1.0.0",
+    "name": "anomaly/select-field-type",
+    "type": "streams-addon",
+    "description": "Select field type.",
     "authors": [
         {
             "name": "AnomalyLabs",
-            "email": "projects@aiwebsystems.com"
+            "email": "hello@anomaly.is"
         }
     ],
-    "source" : {
-        "type" : "vcs",
-        "url" : "git@github.com:anomalylabs/select-field-type.git",
-        "reference" : "master"
-    },
-    "minimum-stability": "dev",
     "extra": {
         "branch-alias": {
             "dev-master": "1.0.x-dev"
         }
-    }
+    },
+    "minimum-stability": "dev"
 }
