--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,22 @@
 {
     "name": "anomaly/select-field_type",
     "type": "streams-addon",
-    "description": "Select field type.",
+    "description": "A select dropdown field type.",
+    "keywords": ["streams-addon", "select", "pyrocms", "laravel"],
+    "homepage": "http://anomaly.is/",
+    "version": "1.0.0-alpha",
+    "license": "MIT",
     "authors": [
         {
-            "name": "AnomalyLabs",
-            "email": "hello@anomaly.is"
+            "name": "AnomalyLabs, Inc.",
+            "email": "hello@anomaly.is",
+            "homepage": "http://anomaly.is/",
+            "role": "Owner"
         }
     ],
+    "support": {
+        "email": "support@anomaly.is"
+    },
     "autoload": {
         "psr-4": {
             "Anomaly\\SelectFieldType\\": "src/"
