--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,12 @@
     "name": "anomaly/select-field_type",
     "type": "streams-addon",
     "description": "A select dropdown field type.",
-    "keywords": ["streams-addon", "select", "pyrocms", "laravel"],
+    "keywords": [
+        "streams-addon",
+        "select",
+        "pyrocms",
+        "laravel"
+    ],
     "homepage": "http://anomaly.is/",
     "version": "1.0.0-alpha",
     "license": "MIT",
