--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "anomaly/select-field_type",
     "type": "streams-addon",
-    "description": "A language dropdown field type.",
+    "description": "A dropdown field type.",
     "keywords": [
         "streams field type",
         "streams addon",
