--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "choices": "^0.1.0",
         "cross-env": "^5.1",
         "laravel-mix": "^4.0.12",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.16.0",
-        "sass-loader": "^7.1.0"
+        "sass-loader": "^7.1.0",
+        "vue-template-compiler": "^2.6.11"
+    },
+    "dependencies": {
+        "vue-multiselect": "^2.1.6"
     }
 }
