--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "anomaly/select-field_type",
+    "name": "pyro/select-field_type",
     "type": "streams-addon",
     "description": "A dropdown field type.",
     "keywords": [
